--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "@angular/compiler-cli": "^17.0.0",
         "@types/jasmine": "~5.1.0",
         "@typescript-eslint/eslint-plugin": "^6.15.0",
+        "autoprefixer": "^10.4.16",
         "eslint": "^8.56.0",
         "eslint-config-prettier": "^9.1.0",
         "eslint-config-standard-with-typescript": "^43.0.0",
@@ -43,7 +44,9 @@
         "karma-coverage": "~2.2.0",
         "karma-jasmine": "~5.1.0",
         "karma-jasmine-html-reporter": "~2.1.0",
+        "postcss": "^8.4.32",
         "prettier": "3.1.1",
+        "tailwindcss": "^3.3.7",
         "typescript": "~5.2.2"
     }
 }
