--- a/.prettierrc
+++ b/.prettierrc
@@ -2,5 +2,7 @@
     "trailingComma": "all",
     "tabWidth": 4,
     "semi": true,
-    "singleQuote": true
+    "singleQuote": true,
+    "printWidth": 110,
+    "plugins": ["prettier-plugin-tailwindcss"]
 }
