Squashed commit of the following:
commit cfdd6a7c97e530df240fe95a61ce6f61e5c84022
Author: stefan-bay <stefanbay1@gmail.com>
Date:   Tue Dec 19 21:51:33 2023 -0500

    initial sidebar

commit 09a0ccaa1f2336afa208580bc8582e53e7796611
Author: stefan-bay <stefanbay1@gmail.com>
Date:   Tue Dec 19 21:42:06 2023 -0500

    remove css file

commit 7ca4688f12e70eeb8ec5959fa0e3940f5fee9a4b
Author: stefan-bay <stefanbay1@gmail.com>
Date:   Tue Dec 19 21:41:22 2023 -0500

    editor config

commit dee0da98fc3b701ba4108beae4cae30540186e1b
Author: stefan-bay <stefanbay1@gmail.com>
Date:   Tue Dec 19 21:41:10 2023 -0500

    add css.gg

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
     "editor.defaultFormatter": "esbenp.prettier-vscode",
     "[html]": {
-        "editor.wordWrap": "bounded"
+        "editor.wordWrap": "on"
     }
 }
