--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
         "karma-coverage": "~2.2.0",
         "karma-jasmine": "~5.1.0",
         "karma-jasmine-html-reporter": "~2.1.0",
+        "netlify-cli": "^17.21.1",
         "postcss": "^8.4.32",
         "prettier": "3.1.1",
         "prettier-plugin-tailwindcss": "^0.5.9",
