--- a/package.json
+++ b/package.json
@@ -12,24 +12,24 @@
     },
     "private": true,
     "dependencies": {
-        "@angular/animations": "^17.0.0",
-        "@angular/common": "^17.0.0",
-        "@angular/compiler": "^17.0.0",
-        "@angular/core": "^17.0.0",
-        "@angular/fire": "^17.0.0",
-        "@angular/forms": "^17.0.0",
-        "@angular/platform-browser": "^17.0.0",
-        "@angular/platform-browser-dynamic": "^17.0.0",
-        "@angular/router": "^17.0.0",
+        "@angular/animations": "^17.3.0",
+        "@angular/common": "^17.3.0",
+        "@angular/compiler": "^17.3.0",
+        "@angular/core": "^17.3.0",
+        "@angular/fire": "^17.0.1",
+        "@angular/forms": "^17.3.0",
+        "@angular/platform-browser": "^17.3.0",
+        "@angular/platform-browser-dynamic": "^17.3.0",
+        "@angular/router": "^17.3.0",
         "css.gg": "^2.1.1",
         "rxjs": "~7.8.0",
         "tslib": "^2.3.0",
         "zone.js": "~0.14.2"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "^17.0.7",
-        "@angular/cli": "^17.0.7",
-        "@angular/compiler-cli": "^17.0.0",
+        "@angular-devkit/build-angular": "^17.3.0",
+        "@angular/cli": "^17.3.0",
+        "@angular/compiler-cli": "^17.3.0",
         "@types/jasmine": "~5.1.0",
         "@typescript-eslint/eslint-plugin": "^6.15.0",
         "autoprefixer": "^10.4.16",
@@ -45,6 +45,7 @@
         "karma-coverage": "~2.2.0",
         "karma-jasmine": "~5.1.0",
         "karma-jasmine-html-reporter": "~2.1.0",
+        "netlify-cli": "^17.21.1",
         "postcss": "^8.4.32",
         "prettier": "3.1.1",
         "prettier-plugin-tailwindcss": "^0.5.9",
